--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,7 @@
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
+        <label for="project-name">Game Title:</label>
         <input class="form-input" type="text" id="project-name" name="project-name" />
       </div>
       <div class="form-group">
@@ -27,7 +27,7 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if review.length}}
   <div class="col-md-6 project-list">
     <h3>Current Reviews:</h3>
 
