--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -34,7 +34,7 @@
     {{#each Review as |review|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/models/{{review.id}}">{{review.name}}</a></h4>
+        <h4><a href="/review/{{review.id}}">{{review.name}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{review.id}}">DELETE</button>
