--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,19 +10,11 @@
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">Game Title:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="game-title">Game Title:</label>
+        <input class="form-input" type="text" id="game-title" name="game-title" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">Commits:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Find</button>
       </div>
     </form>
   </div>
