--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,8 +10,8 @@
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">Game Title:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="game-title">Game Title:</label>
+        <input class="form-input" type="text" id="game-title" name="game-title" />
       </div>
       <div class="form-group">
         <label for="project-funding">needed funding ($):</label>
