--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,14 +1,16 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
-</div>
+<section class="card">
+    <a href="/review/{{id}}">
+        <header>{{gameCard.title}}</header>
+        <div class="card-body">
+            <div>Genres: {{gameCard.genre}}</div>
+            <div>Platforms: {{gameCard.platform}}</div>
+            <div>Description: {{gameCard.description}}</div>
+            <div class="form-group">
+                <label for="project-desc">Comments:</label>
+                <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+            </div>
+        </div>
+    </a>
+</section>
+
+<script src="/js/profile.js"></script>
