review will render now

--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,16 +1,16 @@
 <section class="card">
-    <a href="/review/{{id}}">
-        <header>{{gameCard.title}}</header>
+    
+        <header>{{title}}</header>
         <div class="card-body">
-            <div>Genres: {{gameCard.genre}}</div>
-            <div>Platforms: {{gameCard.platform}}</div>
-            <div>Description: {{gameCard.description}}</div>
+            <div>Genres: {{genre}}</div>
+            <div>Platforms: {{platform}}</div>
+            <div>Description: {{description}}</div>
             <div class="form-group">
                 <label for="project-desc">Comments:</label>
                 <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
             </div>
         </div>
-    </a>
+    
 </section>
 
 <script src="/js/profile.js"></script>
