worked on stuff

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -19,8 +19,6 @@
     </form>
   </div>
 
-
-
   {{#if review.length}}
   <div class="col-md-6 review-list">
     <h3>Current Reviews:</h3>
@@ -28,7 +26,7 @@
     {{#each Review as |review|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/review/{{review.id}}">{{review.name}}</a></h4>
+        <h4><a href="/review/{{review.id}}">{{review.game_title}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{review.id}}">DELETE</button>
