--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 header,
-.project:not(:last-child) {
+.review:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
@@ -18,8 +18,3 @@ header,
   text-decoration: underline;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
-}
