--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,11 @@
 <!-- Loop over each object in the projects array -->
-{{#each Review as |review| }}
-<div class="row mb-4 project">
+{{#each Reviews as |review| }}
+<div class="row mb-4 review">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{review.id}}">{{review.name}}</a>
+      <a href="/review/{{review.id}}">{{review.game_title}}</a>
     </h2>
-    <p>Created by {{review.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{review.user.name}} on {{format_date review.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
