--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,16 +1,19 @@
 <section class="card">
-    
-        <header>{{title}}</header>
-        <div class="card-body">
-            <div>Genres: {{genre}}</div>
-            <div>Platforms: {{platform}}</div>
-            <div>Description: {{description}}</div>
-            <div class="form-group">
-                <label for="project-desc">Comments:</label>
-                <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-            </div>
+
+    <header>{{title}}</header>
+    <div class="card-body">
+        <div>Genres: {{genre}}</div>
+        <div>Platforms: {{platform}}</div>
+        <div>Description: {{description}}</div>
+        <div class="form-group">
+            <label for="review-desc">Comments:</label>
+            <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
         </div>
-    
+        <div class="form-group" id="reviewSubmit">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+
 </section>
 
-<script src="/js/profile.js"></script>
+<script src="/js/review.js"></script>
