--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,9 +4,9 @@
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{review.id}}">{{review.name}}</a>
+      <a href="/project/{{review.id}}">{{review.game_title}}</a>
     </h2>
-    <p>Created by {{review.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{review.user.name}} on {{format_date review.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
