--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Loop over each object in the projects array -->
-{{#each Review as |review| }}
+{{#each review as |review| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
