trying to fix the submit button in review

--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -2,11 +2,11 @@
 
     <header>{{title}}</header>
     <div class="card-body">
-        <div>Genres: {{genre}}</div>
-        <div>Platforms: {{platform}}</div>
-        <div>Description: {{description}}</div>
+        <div><strong>Genre:</strong> {{genre}}</div>
+        <div><strong>Platforms:</strong> {{platform}}</div>
+        <div><strong>Description:</strong> {{description}}</div>
         <div class="form-group">
-            <label for="review-desc">Comments:</label>
+            <label for="review-desc"><strong>Comments:</strong> </label>
             <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
         </div>
         <div class="form-group" id="reviewSubmit">
