--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,10 +1,10 @@
 <section class="card">
-
-    <header>{{title}}</header>
+    <form class="new-review">
+    <header id="game_title">{{title}}</header>
     <div class="card-body">
-        <div><strong>Genre:</strong> {{genre}}</div>
+        <div id="game_genre"><strong>Genre:</strong> {{genre}}</div>
         <div><strong>Platforms:</strong> {{platform}}</div>
-        <div><strong>Description:</strong> {{description}}</div>
+        <div id="description"><strong>Description:</strong> {{description}}</div>
         <div class="form-group">
             <label for="review-desc"><strong>Comments:</strong> </label>
             <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
@@ -13,7 +13,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </div>
-
+</form>
 </section>
 
 <script src="/js/review.js"></script>
