--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ header,
   border-bottom: 1px solid #ccc;
 }
 
+body{
+  background-color: beige;
+}
+
 .no-button {
   background: none;
   border: none;
