--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,14 @@
 <!-- Loop over each object in the projects array -->
-{{#each review as |review| }}
+{{#each reviews as |review| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
 
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{review.id}}">{{review.game_title}}</a>
+      <a href="/review/{{review.id}}">{{review.game_title}}</a>
 
     </h2>
-    <p>Created by {{review.user.name}} on {{format_date review.date_created}}</p>
+    <p>Created by {{review.user.name}} on {{review.created_at}}</p>
   </div>
   <div class="col-md-7">
     <p>
