--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
       <a href="/review/{{review.id}}">{{review.game_title}}</a>
 
     </h2>
-    <p>Created by {{review.user.name}} on {{review.created_at}}</p>
+    <p>Created by {{review.user.name}} on {{format_date review.createdAt}}</p>
   </div>
   <div class="col-md-7">
     <p>
