--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -6,8 +6,8 @@
         <div><strong>Platforms:</strong> {{platform}}</div>
         <div id="description"><strong>Description:</strong> {{description}}</div>
         <div class="form-group">
-            <label for="review-desc"><strong>Comments:</strong> </label>
-            <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
+            <label for="review-comment"><strong>Comments:</strong> </label>
+            <textarea class="form-input" id="review-comment" name="review-comment"></textarea>
         </div>
         <div class="form-group" id="reviewSubmit">
             <button type="submit" class="btn btn-primary">Submit</button>
