--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
   <div class="col-md-6 review-list">
     <h3>Current Reviews:</h3>
 
-    {{#each Review as |review|}}
+    {{#each review as |review|}}
     <div class="row mb-2">
       <div class="col-md-8">
         <h4><a href="/review/{{review.id}}">{{review.game_title}}</a></h4>
