--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,11 +4,11 @@
   <div class="col-md-5">
     <h2>
 
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+     
       <a href="/review/{{review.id}}">{{review.game_title}}</a>
 
     </h2>
-    <p>Created by {{review.user.name}}</p>
+    <p>Created by {{review.user.name}} on {{format_date review.createdAt}}</p>
   </div>
   <div class="col-md-7">
     <p>
