--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 header,
 .review:not(:last-child) {
   border-bottom: 1px solid #ccc;
+  color: black;
 }
 
 .no-button {
@@ -18,3 +19,37 @@ header,
   text-decoration: underline;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-left: -15px;
+  margin-right: -15px;
+  color: plum;
+}
+
+.col-auto {
+  flex-grow: 1;
+  flex-basis: 0;
+  color: lightblue;
+}
+
+.display-flex {
+  display: flex !important;
+  color: plum;
+}
+
+html {
+  background-color: black;
+  font-size: 16px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  min-width: 300px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
