trying to get the comments to work

--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -5,7 +5,8 @@
             <div id="game_genre"><strong>Genre:</strong> {{genre}}</div>
             <div><strong>Platforms:</strong> {{platform}}</div>
             <div id="description"><strong>Description:</strong> {{description}}</div>
-            <div class="form-group">
+
+            <div class="edit-review">
                 <label for="review-desc"><strong>Comments:</strong> </label>
                 <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
             </div>
@@ -16,4 +17,5 @@
     </form>
 </section>
 
+<script src="/js/edit-review.js"></script>
 <script src="/js/comment.js"></script>
