fixed display issues

--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -1,8 +1,8 @@
 <section class="card">
     <form class="updated-review">
-        <header id="game_title">{{title}}</header>
+        <header id="game_title"><strong> {{game_title}}</strong></header>
         <div class="card-body">
-            <div id="game_genre"><strong>Genre:</strong> {{genre}}</div>
+            <div id="game_genre"><strong>Genre:</strong> {{game_genre}}</div>
             <div><strong>Platforms:</strong> {{platform}}</div>
             <div id="description"><strong>Description:</strong> {{description}}</div>
 
