added notes/clue to help us post new review

--- a/views/create-review.handlebars
+++ b/views/create-review.handlebars
@@ -3,7 +3,7 @@
     <header id="game_title">{{title}}</header>
     <div class="card-body">
         <div id="game_genre"><strong>Genre:</strong> {{genre}}</div>
-        <div><strong>Platforms:</strong> {{platform}}</div>
+        <div id= "platform"><strong>Platforms:</strong> {{platform}}</div>
         <div id="description"><strong>Description:</strong> {{description}}</div>
         
         <div class="form-group" id="reviewSubmit">
