--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,18 +5,18 @@ header,
 }
 
 .no-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
-  text-decoration: none;
-  font-size: 100%;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: lightgoldenrodyellow;
+    text-decoration: none;
+    font-size: 100%;
 }
 
 .no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+    color: red;
+    text-decoration: underline;
 }
 
 .row {
@@ -52,4 +52,29 @@ html {
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
+}
+
+.card {
+    border: 1px solid #1a1a1a;
+    margin-bottom: 1rem;
+    background-color: plum;
+}
+
+.card .card-body {
+    padding: 0.375rem;
+    color: black;
+}
+
+element.style {
+    color: purple;
+}
+
+a {
+    color: palegoldenrod;
+    text-decoration: none;
+}
+
+h2 {
+    font-size: 2rem;
+    color: plum;
 }
